# SnakeItog

./: CMakeLists.txt  inputdialog.cpp  inputdialog.h  main.cpp  resultwindow.cpp  resultwindow.h  snake.cpp  snake.h
